# tfQuake2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shaders.bat
ctf/: CMakeLists.txt
game/: CMakeLists.txt  q_shared.h
ref_gl/: gl_local.h
ref_vk/: vk_mesh.c  vk_rmain.c
ref_vk/spirv/: basic_color_quad_frag.c  basic_color_quad_vert.c  basic_frag.c  basic_vert.c  beam_vert.c  d_light_vert.c  model_frag.c  model_vert.c  nullmodel_vert.c  particle_vert.c  point_particle_frag.c  point_particle_vert.c  polygon_lmap_frag.c  polygon_lmap_vert.c  polygon_vert.c  polygon_warp_vert.c  postprocess_frag.c  postprocess_vert.c  shadows_vert.c  skybox_vert.c  sprite_vert.c  world_warp_frag.c  world_warp_vert.c
rogue/: CMakeLists.txt
shaders/: basic.frag  basic.vert  basic_color_quad.frag  basic_color_quad.vert  beam.vert  d_light.vert  model.frag  model.vert  nullmodel.vert  particle.vert  point_particle.frag  point_particle.vert  polygon.vert  polygon_lmap.frag  polygon_lmap.vert  polygon_warp.vert  postprocess.frag  postprocess.vert  shadows.vert  skybox.vert  sprite.vert  world_warp.frag  world_warp.vert
smd/: CMakeLists.txt  smd.aps
tf/: CMakeLists.txt
tf/shaders/: ShaderList.fsl  basic.frag.fsl  basic.frag.h.fsl  basic.vert.fsl  basic_color_quad.frag.fsl  basic_color_quad.frag.h.fsl  basic_color_quad.vert.fsl  beam.vert.fsl  d_light.vert.fsl  model.frag.fsl  model.vert.fsl  nullmodel.vert.fsl  particle.vert.fsl  point_particle.frag.fsl  point_particle.vert.fsl  polygon.vert.fsl  polygon_lmap.frag.fsl  polygon_lmap.vert.fsl  polygon_warp.vert.fsl  postprocess.frag.fsl  postprocess.vert.fsl  shadows.vert.fsl  skybox.vert.fsl  sprite.vert.fsl  world_warp.frag.fsl  world_warp.vert.fsl
tf/src/: anorms.h  anormtab.h  cd_soloud.cpp  common.h  gra_common.cpp  gra_common.h  gra_draw.cpp  gra_image.cpp  gra_light.cpp  gra_local.h  gra_main.cpp  gra_mesh.cpp  gra_model.cpp  gra_model.h  gra_rmain.cpp  gra_rmisc.cpp  gra_rsurf.cpp  gra_warp.cpp  in_common.cpp  q_shwin.cpp  snd_miniaudio_null.cpp  snddma_soloud.cpp  sound_soloud.cpp  sys_api.cpp  sys_event.cpp  sys_event.h  sys_export.cpp  sys_main.cpp  sys_the-forge.cpp  sys_win32.cpp  vid_common.cpp  vid_menu.cpp
win32/: q2.aps
xatrix/: CMakeLists.txt
zaero/: CMakeLists.txt
