add_library(baseq2 SHARED
    "g_ai.c"
    "g_chase.c"
    "g_cmds.c"
    "g_combat.c"
    "g_func.c"
    "g_items.c"
    "g_local.h"
    "g_main.c"
    "g_misc.c"
    "g_monster.c"
    "g_phys.c"
    "g_save.c"
    "g_spawn.c"
    "g_svcmds.c"
    "g_target.c"
    "g_trigger.c"
    "g_turret.c"
    "g_utils.c"
    "g_weapon.c"
    "m_actor.c"
    "m_actor.h"
    "m_berserk.c"
    "m_berserk.h"
    "m_boss2.c"
    "m_boss2.h"
    "m_boss3.c"
    "m_boss31.c"
    "m_boss31.h"
    "m_boss32.c"
    "m_boss32.h"
    "m_brain.c"
    "m_brain.h"
    "m_chick.c"
    "m_chick.h"
    "m_flash.c"
    "m_flipper.c"
    "m_flipper.h"
    "m_float.c"
    "m_float.h"
    "m_flyer.c"
    "m_flyer.h"
    "m_gladiator.c"
    "m_gladiator.h"
    "m_gunner.c"
    "m_gunner.h"
    "m_hover.c"
    "m_hover.h"
    "m_infantry.c"
    "m_infantry.h"
    "m_insane.c"
    "m_insane.h"
    "m_medic.c"
    "m_medic.h"
    "m_move.c"
    "m_mutant.c"
    "m_mutant.h"
    "m_parasite.c"
    "m_parasite.h"
    "m_player.h"
    "m_rider.h"
    "m_soldier.c"
    "m_soldier.h"
    "m_supertank.c"
    "m_supertank.h"
    "m_tank.c"
    "m_tank.h"
    "p_client.c"
    "p_hud.c"
    "p_trail.c"
    "p_view.c"
    "p_weapon.c"
    "q_shared.c"
    "q_shared.h"
    "game.h"
)

set_target_properties(baseq2 PROPERTIES OUTPUT_NAME "gamex64")